# cuda_speedtest

./: .clang-format  .gitignore  CMakeLists.txt  Makefile  README.md  directory_structure.md
include/: matrix_generator.h  time_utils.h
matmul/: matmul_cublas.cu  matmul_cuda.cu  matmul_mkl.cpp
python/: mandelbrot.py  mandelbrot_np.py  matmul_numpy_mkl.ipynb  mean_shift.ipynb
src/: time_utils.cpp
src/libsgemm/: CMakeLists.txt
src/libsgemm/include/: tools.h
src/libsgemm/include/cuda/: sgemm_coalescing.h  sgemm_naive.h  sgemm_smem_block.h
src/libsgemm/src/cpu/: sgemm_cpu.cpp
src/libsgemm/src/cuda/: sgemm_coalescing.cu  sgemm_global_mem_coalesce.cu  sgemm_naive.cu  sgemm_shared_mem_block.cu  sgemm_smem_block.cu
src/libsgemm/src/include/: helper.h
src/libsgemm/src/utils/: time_utils.cpp
src/libsgemm/tools/: runner.cpp
src/mandelbrot/: Makefile  mandelbrot  mandelbrot.cpp  mandelbrot_armneon.cpp  mandelbrot_avx2.cpp  mandelbrot_avx512.cpp  mandelbrot_cuda.cu  mandelbrot_gpt.cpp  mandelbrot_omp.cpp  mandelbrot_simd.cpp
src/matmul/: Makefile  matmul_blas.cpp  matmul_cpu.cpp  matmul_cublas.cu  matmul_cuda.cu  matmul_mkl.cpp  matmul_mkl_double.cpp  matmul_on_cpu.ipynb  matmul_on_gpu.ipynb
src/matmul/include/: time_utils.h
src/python/: matmul_numpy_mkl.ipynb  matmul_on_cpu.ipynb  matmul_on_gpu.ipynb
src/sgemm/: run.cpp  runner.cpp
